--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@react-pdf/renderer": "^3.1.9",
+    "js-yaml": "^4.1.0",
     "nodemon": "^2.0.22",
     "npm-run-all": "^4.1.5",
     "pdf-image": "^2.0.0",
